--- a/source/_posts/时间复杂度和空间复杂度.md
+++ b/source/_posts/时间复杂度和空间复杂度.md
@@ -3,8 +3,11 @@ title: 时间复杂度和空间复杂度
 date: 2018-12-10 11:20:37
 tags: 算法
 ---
+<!--toc-->
 > 前言：作为一个~~勤奋~~**得过且过**的前端，感觉算法离得好遥远。最近突然奋发向上，想要了解一下算法这玩意儿是啥？然后发现了一个叫[leetcode](https://leetcode-cn.com/problemset/all/)的算法网站，盲目做了几道题，偷偷看了几题的算法解答。发现有一个复杂度分析的东西，这东西又分为时间复杂度和空间复杂度。为了了解自己的算法有多烂，当然我要了解这时间复杂度和空间复杂度是什么东西？
+
 ## 时间复杂度（Time Complexity）
+
 顾名思义就是和时间有关的，那就是运行时间长短的事儿了。根据维基百科定义：
 > 算法的时间复杂度是一个函数，它定性描述该算法的运行时间。常用大O符号表述，不包括这个函数的低阶项和首项系数。
 
