--- a/source/_posts/时间复杂度和空间复杂度.md
+++ b/source/_posts/时间复杂度和空间复杂度.md
@@ -11,6 +11,18 @@ tags: 算法
 顾名思义就是和时间有关的，那就是运行时间长短的事儿了。根据维基百科定义：
 > 算法的时间复杂度是一个函数，它定性描述该算法的运行时间。常用大O符号表述，不包括这个函数的低阶项和首项系数。
 
-记作：T(n) = O(f(n));这里面的n应该表示的是一个随机的正整数，而T(n)则是当n为某个随机正整数时，所要执行的运算次数，学术名叫做**最坏情况复杂度**。
+记作：T(n) = Ｏ(f(n));这里面的n应该表示的是一个随机的正整数，而T(n)则是当n为某个随机正整数时，所要执行的运算次数，学术名叫做**时间频度**，Ｏ(f(n)) 为算法的渐进时间复杂度，简称时间复杂度。值得注意的是时间频度不同，但时间复杂度可能相同，如：T(n) = n^2 + 2n + 3 和 T(n) = 2n^2 + 1 中频度不同，但时间复杂度相同，都为O(n^2)。
 
 ## 空间复杂度（Space Complexity）
+
+是指一个程序运行完所需内存的大小，空间复杂度则是预先对所需内存进行估计。存储空间主要包含以下两个部分：
+
+1. **固定部分**，与输入输出的数据大小无关。主要包括指令空间（即代码）、数据空间（即常量，简单变量）所占空间。这部分称为静态空间
+
+2. **可变部分**，主要包括动态分布空间、递归所需空间，顾名思义与固定部分相反，是与输入输出大小有关。这部分空间是衡量算法的空间复杂度的主要部分。
+
+用公式记作：**S(n)=O(f(n))**；n为问题的规模，S(n)表示空间复杂度，存储空间用f(n)表示
+
+## 结尾
+
+对于一个算法，空间复杂度和时间复杂度往往是相互影响的，当追求时间复杂度时，往往空间复杂度的性能变差，反之亦然。因此当设计一个算法时，要权衡利弊，综合算法的各项性能、机器的环境，使用频率，数据量大小，描述语言特性等来设计出较好的算法。两者复杂度合称为算法的复杂度
