--- a/source/_posts/时间复杂度和空间复杂度.md
+++ b/source/_posts/时间复杂度和空间复杂度.md
@@ -11,7 +11,38 @@ tags: 算法
 顾名思义就是和时间有关的，那就是运行时间长短的事儿了。根据维基百科定义：
 > 算法的时间复杂度是一个函数，它定性描述该算法的运行时间。常用大O符号表述，不包括这个函数的低阶项和首项系数。
 
-记作：T(n) = Ｏ(f(n));这里面的n应该表示的是一个随机的正整数，而T(n)则是当n为某个随机正整数时，所要执行的运算次数，学术名叫做**时间频度**，Ｏ(f(n)) 为算法的渐进时间复杂度，简称时间复杂度。值得注意的是时间频度不同，但时间复杂度可能相同，如：T(n) = n^2 + 2n + 3 和 T(n) = 2n^2 + 1 中频度不同，但时间复杂度相同，都为O(n^2)。
+### 公式
+
+记作：T(n) = Ｏ(f(n));这里面的n应该表示的是一个随机的正整数，而T(n)则是当n为某个随机正整数时，所要执行的运算时间，学术名叫做**时间频度**，Ｏ(f(n)) 为算法的渐进时间复杂度，简称时间复杂度。值得注意的是时间频度不同，但时间复杂度可能相同，如：T(n) = n^2 + 2n + 3 和 T(n) = 2n^2 + 1 中频度不同，但时间复杂度相同，都为O(n^2)。
+
+### 计算公式
+
+那么如何得到f(n)?
+
+例如：计算一个1+2+3+……+10+……+n
+第一种算法：
+
+```JavaScript
+let result = 0;// 执行1次
+for(let i = 1; i <= n; i ++) { // 执行n + 1次
+    result += i;  // 执行n次
+}
+return result;// 执行1次
+```
+
+第二种算法：
+
+```JavaScript
+let result = 0; // 执行1次
+result = (1 + n) * n / 2; // 执行1次
+return result; // 执行1次
+```
+
+第一种算法执行次数：1 + n + 1 + n + 1 = 2n + 3;
+因此该算法执行了2n + 3;
+第二种算法执行次数： 1 + 1 + 1 ；
+因此该算法执行了3；
+按照不包括这个函数的低阶项和首项系数的原则。则这两个算法的时间复杂度分别为O(n)和O(1)
 
 ## 空间复杂度（Space Complexity）
 
