--- a/source/_posts/那些前端组踩过的坑.md
+++ b/source/_posts/那些前端组踩过的坑.md
@@ -22,3 +22,7 @@ tags: 企朋
   // $title.html( `<span id="${id}">${$title.html()}</span>` );
   // $title.removeAttr('id');```
 
+## vue相关问题
+问题：*vue-router的返回功能出现无法使用，back*
+
+> 有可能是因为全局守卫里面未调用next()所致
