--- a/source/_posts/那些前端组踩过的坑.md
+++ b/source/_posts/那些前端组踩过的坑.md
@@ -23,6 +23,11 @@ tags: 企朋
   // $title.removeAttr('id');```
 
 ## vue相关问题
+
 问题：*vue-router的返回功能出现无法使用，back*
 
 > 有可能是因为全局守卫里面未调用next()所致
+
+问题：*父组件与子组件之间mount和created执行顺序*
+
+> 父created=>子created=>子mounted=>父mounted
